[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "yabi-bython"
version = "0.7.3"
description = "Yet Another Bython (braced Python) Implementation"
authors = [{name = "Sóla Lusøt"}]
readme = "README.md"
dependencies = ["pwcp>=0.11,<0.12"]
optional-dependencies = {tests = ["pytest"]}
scripts = {yabi = "yabi:main", yabi-convert = "yabi:convert_main"}

[tool.setuptools]
packages = ["yabi"]
