[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[project]
name = "yabi-bython"
version = "0.8.1"
description = "Yet Another Bython (braced Python) Implementation"
authors = [{name = "Sóla Lusøt"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = ["pwcp>=0.11,<0.12"]
optional-dependencies = {tests = ["pytest"]}
scripts = {yabi = "yabi:main", yabi-convert = "yabi:convert_main"}
